<resources>
    <string name="app_name">MadLevel1Task2</string>
    <string name="title">Conjunction (AND)</string>
    <string name="a_value">A</string>
    <string name="b_value">B</string>
    <string name="conjuction_value">A ^ B</string>
    <string name="true_value">T</string>
    <string name="false_value">F</string>
    <string name="submit">Submit</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="answer">Correct answers: %d</string>
</resources>